--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   line-height: 1.5;
   color: #333;
   font-family: "Roboto", sans-serif;
+  background: #ffffff;
 }
 
 h1,
@@ -101,20 +102,20 @@ p {
   justify-content: center;
   justify-content: space-between;
   align-items: center;
-  margin: 10px;
+  margin: 0px 0px 0px 0px;
   padding: 10px;
   flex-direction: row;
 }
 
 .logo_custom img {
-  height: 85px;
+  height: 80px;
   width: auto;
 }
 
 .menuitems_custom {
-  margin: 10px 10px;
+  margin: 10px 2px;
   text-transform: uppercase;
-  font-size: 18px;
+  font-size: 16px;
   margin-top: 25px;
 }
 
@@ -138,5 +139,142 @@ p {
   height: 55px;
   border-radius: 30px;
   margin: 5px;
-  margin-top: 20px;
+  margin-top: 15px;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.button_and_menuitems {
+  justify-content: center;
+  align-items: center;
+  color: #7d0000;
+}
+
+/* hero split */
+
+/* Hero Split */
+.hero-split {
+  display: flex;
+  flex-wrap: wrap;
+  min-height: 90vh;
+}
+
+.hero-text {
+  flex: 1;
+  background: #7e1000; /* warm orange */
+  color: #fff;
+  padding: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 80px;
+}
+
+.hero-text h1 {
+  font-size: 2.45vw;
+  font-weight: 100;
+  margin-bottom: 20px;
+  line-height: 2.2;
+}
+
+.hero-text p {
+  font-size: 1rem;
+  margin-bottom: 30px;
+  padding: 14px 0px;
+}
+
+.btn-custom {
+  background: #ffffff; /* deep red */
+  border: none;
+  padding: 15px 30px;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+.btn {
+  background-color: #7e1000;
+  color: #ffefef;
+  border: none;
+}
+
+/* optional rounded edges */
+.hero_rounded {
+  border-radius: 20px;
+  overflow: hidden; /* crop the rounded edges */
+}
+
+.hero-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Mobile */
+@media (max-width: 768px) {
+  .hero-split {
+    flex-direction: column;
+  }
+  .hero-text {
+    padding: 40px;
+  }
+}
+
+/* Rounded title and image  */
+.hero_rounded {
+  margin: 15px 5px 15px 20px;
+  border-radius: 20px;
+}
+
+.hero-img {
+  background-image: url("/images/9.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 53%;
+}
+
+.btn-custom {
+  width: 50%;
+  background: #ffffff;
+  color: #8f0000;
+  font-weight: 200;
+}
+.menubutton_custom2 {
+  background: none;
+  color: #7e1000;
+  border: 2px solid #7e1000;
+}
+
+@font-face {
+  font-family: "DeLatto";
+  src: url("../fonts/DeLatto.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.main_hero_title_custom {
+  font-family: "DeLatto", sans-serif;
+  font-size: 20px;
+}
+
+/* All menu items */
+
+.all_menu_items_fonts {
+  font-weight: 500;
+  font-size: 14px;
+}
+
+/* Colours */
+
+.white_custom {
+  background: #ffffff;
+}
+
+/* Mobile */
+
+@media (max-width: 768px) {
+  .hero-text h1 {
+  }
 }
