--- a/css/style.css
+++ b/css/style.css
@@ -440,6 +440,13 @@ p {
   color: rgb(153, 2, 2);
 }
 
+.btn-custom {
+  position: relative;
+  overflow: hidden;
+  background: #fff;
+  color: #8f0000;
+}
+
 /* Mobile */
 
 @media (max-height: 800px) {
