--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   line-height: 1.5;
   color: #333;
   font-family: "Roboto", sans-serif;
+
   background: #ffffff;
 }
 
@@ -103,7 +104,7 @@ p {
   justify-content: space-between;
   align-items: center;
   margin: 0px 0px 0px 0px;
-  padding: 10px;
+  padding: 10px 20px;
   flex-direction: row;
 }
 
@@ -455,6 +456,9 @@ p {
     flex-wrap: wrap;
     height: 80vh;
   }
+  .splide__slide img {
+    height: 80vh;
+  }
 }
 
 @media (max-height: 700px) {
@@ -463,11 +467,17 @@ p {
     flex-wrap: wrap;
     height: 75vh;
   }
+  .splide__slide img {
+    width: 100%;
+    height: 75vh;
+    object-fit: cover;
+    display: block;
+  }
 }
 
-@media (max-width: 1300px), (max-height: 800px) {
+@media (max-width: 1340px), (max-height: 800px) {
   .hero-text h1 {
-    font-size: 2.3vw;
+    font-size: 2.2vw;
   }
   .hero-text p {
     font-size: 13px;
@@ -478,7 +488,7 @@ p {
   }
 }
 
-@media (max-width: 1068px) {
+@media (max-width: 1200px) {
   .hero-text h1 {
   }
   .btn-custom {
@@ -522,7 +532,7 @@ p {
   left: 0;
   width: 100%;
   padding: 0px 30px 0px 0px;
-  background: #fff;
+  background: #ffffff;
   z-index: 1000;
   display: none;
 }
