--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ p {
 /* Section 2 */
 
 .hero-section {
-  background-color: #fff3e7;
+  background-color: #fff6f2;
   text-align: center;
   padding: 130px 20px;
   font-family: "Mitr", sans-serif;
@@ -463,7 +463,7 @@ h2:hover,
 h1:hover,
 p:hover {
   transform: scale(1.01);
-  color: #fff3e7;
+  color: #fff6f2;
 }
 
 .menuitems_custom {
@@ -620,7 +620,7 @@ h2:hover {
 }
 
 .features_section_seating {
-  background-color: #fff3e7;
+  background-color: #fff6f2;
   padding: 50px 50px;
 }
 
@@ -1060,7 +1060,7 @@ button:active {
   padding: 20px !important;
   border-radius: 20px;
   margin: 5px;
-  background: #fef3e7;
+
   transition:
     box-shadow 0.3s ease,
     transform 0.3s ease;
@@ -1078,7 +1078,7 @@ button:active {
 .show_menu {
   display: block;
   list-style-type: none;
-  background: #fff3e7;
+  background: #fff6f2;
   padding: 30px;
   top: 0;
   left: 0;
@@ -1110,6 +1110,10 @@ button:active {
 .click_button {
   display: none;
 }
+
+/* .hero-img-mobile {
+  display: none;
+} */
 
 @media (max-width: 1100px) {
   .extra_button {
@@ -1294,4 +1298,51 @@ button:active {
   .info-card {
     padding: 50px;
   }
+
+  .hero-section h2,
+  h2,
+  .feature-card h3,
+  p {
+    text-align: center !important;
+    width: 100%;
+  }
+
+  .btn-custom {
+    width: 100%;
+  }
+
+  .hero-split {
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .hero-img {
+    width: 100% !important;
+    padding: 8px 35px 30px 35px;
+  }
+
+  .hero-section p {
+    margin: 0 auto 0px;
+  }
+
+  .feature-card-border {
+    border: 0px solid darkred;
+    padding: 0px !important;
+  }
+
+  .instagram_follow {
+    margin-top: 60px;
+    width: 70% !important;
+  }
+  /* .hero-img-mobile {
+    display: block;
+    padding: 0px 35px 30px 35px;
+  }
+
+  .hero-img-regular {
+    display: none;
+  } */
 }
