--- a/css/style.css
+++ b/css/style.css
@@ -976,9 +976,9 @@ a:active {
 }
 
 @media (max-width: 900px), (max-height: 700px) {
-  .hero-text h1 {
+  /* .hero-text h1 {
     font-size: 2.2vw;
-  }
+  } */
   .hero-text p {
     font-size: 13px;
   }
@@ -1008,7 +1008,8 @@ a:active {
 
 @media (max-height: 650px) {
   .hero-text h1 {
-    font-size: 1.5vw;
+    font-size: 5vw;
+    line-height: 38px;
   }
   .hero-text p {
     font-size: 12px;
@@ -1128,6 +1129,9 @@ button:active {
 @media (max-width: 999px) {
   .feature-card_3rdImage {
     display: none;
+  }
+  .hero-img {
+    width: 45%;
   }
 }
 
