finalisation booking, url, seo

--- a/css/style.css
+++ b/css/style.css
@@ -1383,3 +1383,11 @@ button:active {
 
 .coming_soon_block {
 }
+
+.dukviH9w_EuHzTw_qBQt {
+  display: none !important;
+}
+
+.booking-system-spacing {
+  margin-bottom: 40px;
+}
