--- a/css/style.css
+++ b/css/style.css
@@ -1388,6 +1388,25 @@ button:active {
   display: none !important;
 }
 
-.booking-system-spacing {
-  margin-bottom: 40px;
+@media (max-width: 600px) {
+  .outer_custom {
+    margin: 0px;
+  }
+  .hero-img {
+    width: 100% !important;
+    padding: 0px !important;
+    margin-bottom: 35px;
+    border-radius: 0px !important;
+  }
+
+  .hero_rounded_mobile {
+    border-radius: 0px !important;
+  }
+
+  .splide__track {
+    overflow: hidden;
+    position: relative;
+    z-index: 0;
+    height: 500px;
+  }
 }
